--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,15 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+                      http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+  version="3.1">
+  
+  <jsp-config>
+  		<jsp-property-group>
+  			<url-pattern>*.jsp</url-pattern>
+  			<page-encoding>UTF-8</page-encoding>
+  			<include-prelude>/WEB-INF/jspl/taglibs.jspf</include-prelude>
+  		</jsp-property-group>
+  </jsp-config>
 
-<web-app>
-  <display-name>Archetype Created Web Application</display-name>
 </web-app>
